# qrr-quantum-relational-reasoner

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITIQUE.md  FORMALISM.md  LICENSE  MANIFESTO.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_proposal.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: ambiguity_bench.py
docs/: EXPERIMENTS.md  FAQ.md  GLOSSARY.md
docs/assets/: logo_concept.md
examples/: 01_basic_inference.py  02_branch_inspection.py  03_agent_loop.py  agent_tool_use.py  quickstart.py
experiments/: README.md
notebooks/: EXP-001_chi_discrimination.ipynb
qrr/: __init__.py  amplitude_router.py  branch_bank.py  collapse_index.py  decoherence_module.py  entanglement_module.py  observer_module.py  qrr_model.py  unitary_mixer.py
tests/: test_branch_bank.py  test_full_pipeline.py
training/: config_gpt2_stage1.yaml  config_gpt2_stage2.yaml  curriculum.py  loss.py  train.py
