[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qrr"
version = "0.2.0"
description = "Quantum Relational Reasoner: late-collapse inference via coherent branch superposition"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Sebastián Sifontes Valentín", email = ""}
]
keywords = ["machine-learning", "llm", "uncertainty", "coherent-inference", "superposition"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "transformers>=4.40",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
]
benchmarks = [
  "datasets>=2.18",
  "evaluate>=0.4",
  "tqdm>=4.66",
]
notebooks = [
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.urls]
"Homepage" = "https://github.com/sebsv123/qrr-quantum-relational-reasoner"
"Bug Tracker" = "https://github.com/sebsv123/qrr-quantum-relational-reasoner/issues"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"examples/*" = ["T201"]
"notebooks/*" = ["T201", "F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
